# TinyEngine2

./: .gitignore  README.md
Model2FB/: CMakeLists.txt  backbone.fbs
Model2FB/include/: parser.h  test_parser.h
Model2FB/src/: main.cpp  parser.cpp  test_parser.cpp
engine/: CMakeLists.txt
engine/include/: model_generated.h  parser.h  validator.h
engine/src/: main.cpp  parser.cpp  validator.cpp
profiler/: CMakeLists.txt
profiler/TEST/: TEST.csv
profiler/include/: cpu.h  file.h  memory.h  profiler.h  timer.h
profiler/src/: cpu.cpp  file.cpp  main.cpp  memory.cpp  profiler  profiler.cpp
profiler/src/TEST/: TEST.csv
